--- a/CustTrack/Views/Admin/Employee.cshtml
+++ b/CustTrack/Views/Admin/Employee.cshtml
@@ -1,31 +1,40 @@
-﻿@using CustTrack.Models.EntityFramework
-@model List<T_Employee>
+﻿@model CustTrack.Models.EmployeesModel
 @{
     ViewBag.Title = "Employee";
     Layout = "~/Views/Shared/_adminLayout.cshtml";
 }
 
+@ViewBag.Mesaj
 <h2>Çalışanlar</h2>
+<a class="btn btn-success" href="/Admin/Ekle">+</a>
 <table class="table table-bordered">
     <thead>
         <tr>
+            <th>Kullanıcı Adı</th>
             <th>Adı</th>
             <th>Soyadı</th>
             <th>Telefon Numarası</th>
+            <th>Mail</th>
             <th>Yetki derecesi</th>
             <th>Bölümü</th>
+            <th>Güncelle</th>
+            <th>Sil</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var employee in Model)
+        @foreach (var employee in Model.Employees)
         {
-        <tr>
-            <td>@employee.employee_name</td>
-            <td>@employee.employee_surname</td>
-            <td>@employee.employee_phone</td>
-            <td>@employee.employee_authority_id</td>
-            <td>@employee.department_id</td>
-        </tr>
+            <tr>
+                <td>@employee.employee_username</td>
+                <td>@employee.employee_name</td>
+                <td>@employee.employee_surname</td>
+                <td>@employee.employee_phone</td>
+                <td>@employee.employee_mail</td>
+                <td>@Model.Authorities.First(x => x.authority_id == employee.employee_authority_id).authority_name</td>
+                <td>@Model.Departmans.First(x => x.department_id == employee.department_id).department_name</td>
+                <td><a class="btn btn-warning" href="/Admin/EmployeeUpdate/@employee.employee_id">Guncelle</a></td>
+                <td><a class="btn btn-danger" href="/Admin/PSil/@employee.employee_id">Sil</a></td>
+            </tr>
         }
     </tbody>
 </table>
