--- a/CustTrack/Views/Admin/Employee.cshtml
+++ b/CustTrack/Views/Admin/Employee.cshtml
@@ -1,41 +1,47 @@
-﻿@model CustTrack.Models.EmployeesModel
+﻿@model CustTrack.Models.UpdateEmployeeModel
+
 @{
-    ViewBag.Title = "Employee";
+    ViewBag.Title = "Güncelle";
     Layout = "~/Views/Shared/_adminLayout.cshtml";
 }
 
-@ViewBag.Mesaj
-<h2>Çalışanlar</h2>
-<a class="btn btn-success" href="/Admin/Ekle">+</a>
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>Kullanıcı Adı</th>
-            <th>Adı</th>
-            <th>Soyadı</th>
-            <th>Telefon Numarası</th>
-            <th>Mail</th>
-            <th>Yetki derecesi</th>
-            <th>Bölümü</th>
-            <th>Güncelle</th>
-            <th>Sil</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var employee in Model.Employees)
-        {
-            <tr>
-                <td>@employee.employee_username</td>
-                <td>@employee.employee_name</td>
-                <td>@employee.employee_surname</td>
-                <td>@employee.employee_phone</td>
-                <td>@employee.employee_mail</td>
-                <td>@Model.Authorities.First(x => x.authority_id == employee.employee_authority_id).authority_name</td>
-                <td>@Model.Departmans.First(x => x.department_id == employee.department_id).department_name</td>
-                <td><a class="btn btn-warning" href="/Admin/EmployeeUpdate/@employee.employee_id">Guncelle</a></td>
-                <td><a class="btn btn-danger" href="/Admin/PSil/@employee.employee_id">Sil</a></td>
-            </tr>
-        }
-    </tbody>
-</table>
-
+<h4 align="center">Güncelleme: @Model.Employee.employee_name <b>@Model.Employee.employee_surname</b></h4>
+<div align="center">
+    <hr />
+    @using (Html.BeginForm("Employee", "Admin", FormMethod.Post))
+    {
+        @Html.HiddenFor(m => m.Employee.employee_id)
+        <div class="col-lg-12">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKM9BUy0eVYn8_C3sg0J40Oa5MlWpFbS83fleauNdF4W5HQQJQ" class="img-circle" alt="Cinque Terre">
+        </div>
+        <hr />
+        <div class="col-lg-12">
+            <div class="form-group col-lg-6">
+                <p>@Html.TextBoxFor(m => m.Employee.employee_name, new { @class = "form-control", placeholder = "Ad" })</p>
+                <p>@Html.TextBoxFor(m => m.Employee.employee_surname, new { @class = "form-control", placeholder = "Soyad" })</p>
+                <p>@Html.TextBoxFor(m => m.Employee.employee_username, new { @class = "form-control", placeholder = "Kullanıcı Adı" })</p>
+            </div>
+            <div class="form-group col-lg-6">
+                <p>@Html.TextBoxFor(m => m.Employee.employee_mail, new { @class = "form-control", placeholder = "Mail adresi" })</p>
+                <p>@Html.TextBoxFor(m => m.Employee.employee_phone, new { @class = "form-control", placeholder = "Telefon" })</p>
+                <select class="form-group" id="selected_departmant">
+                    @foreach (var dep in Model.Departments)
+                    {
+                        if (dep.department_id == Model.Employee.department_id)
+                        {
+                            <option selected="selected" id="@dep.department_id">@dep.department_name</option>
+                        }
+                        else
+                        {
+                            <option id="@dep.department_id">@dep.department_name</option>
+                        }
+                    }
+                </select>
+            </div>
+        </div>
+        <p>
+            <button type="submit" class="btn"> Kaydet </button>
+            <button type="reset" class="btn"> Temizle</button>
+        </p>
+    }
+</div>
