--- a/CustTrack/Views/Admin/Employees.cshtml
+++ b/CustTrack/Views/Admin/Employees.cshtml
@@ -5,33 +5,26 @@
 }
 
 @ViewBag.Mesaj
-<table class="table">
+<br />
+<table class="table table-bordered">
     <thead>
-        <tr>
-            <th align="center">Kullanıcı Adı</th>
-            <th align="center">Adı</th>
-            <th align="center">Soyadı</th>
-            <th align="center">Telefon Numarası</th>
-            <th align="center">Mail</th>
-            <th align="center">Yetki derecesi</th>
-            <th align="center">Bölümü</th>
-            <th align="center">Güncelle</th>
-            <th align="center">Sil</th>
+        <tr align="center">
+            <th>Adı Soyadı</th>
+            <th>Mail</th>
+            <th>Yetki derecesi</th>
+            <th>Bölümü</th>
+            <th>Detay</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var employee in Model.Employees)
         {
-            <tr>
-                <td align="center">@employee.employee_username</td>
-                <td align="center">@employee.employee_name</td>
-                <td align="center">@employee.employee_surname</td>
-                <td align="center">@employee.employee_phone</td>
-                <td align="center">@employee.employee_mail</td>
-                <td align="center">@Model.Authorities.First(x => x.authority_id == employee.employee_authority_id).authority_name</td>
-                <td align="center">@Model.Departmans.First(x => x.department_id == employee.department_id).department_name</td>
-                <td align="center"><a class="btn btn-warning" href="/Admin/Employee/@employee.employee_id">Guncelle</a></td>
-                <td align="center"><a class="btn btn-danger" href="/Admin/RemoveEmployee/@employee.employee_id">Sil</a></td>
+            <tr align="center">
+                <td>@employee.employee_name @employee.employee_surname</td>
+                <td>@employee.employee_mail</td>
+                <td>@Model.Authorities.First(x => x.authority_id == employee.employee_authority_id).authority_name</td>
+                <td>@Model.Departmans.First(x => x.department_id == employee.department_id).department_name</td>
+                <td><a class="btn btn-secondary" href="/Admin/Employee/@employee.employee_id">Detay</a></td>
             </tr>
         }
     </tbody>
