--- a/CustTrack/Views/Admin/Employee.cshtml
+++ b/CustTrack/Views/Admin/Employee.cshtml
@@ -10,6 +10,7 @@
     <hr />
     @using (Html.BeginForm("Employee", "Admin", FormMethod.Post))
     {
+        @Html.AntiForgeryToken()
         @Html.HiddenFor(m => m._Employee.employee_id)
         <div class="col-lg-12">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKM9BUy0eVYn8_C3sg0J40Oa5MlWpFbS83fleauNdF4W5HQQJQ" class="img-circle" alt="Cinque Terre">
@@ -26,13 +27,13 @@
                 <p>@Html.TextBoxFor(m => m._Employee.employee_mail, new { @class = "form-control", placeholder = "Mail adresi" })</p>
                 <p>@Html.TextBoxFor(m => m._Employee.employee_phone, new { @class = "form-control", placeholder = "Telefon" })</p>
                 <p>@Html.DropDownList("DropDownListDepartmants", new SelectList(Model._Departments.Where(x => x.department_id != Model._Employee.department_id), "department_id", "department_name"), Model._Department.department_name, new { @class = "form-control" })</p>
-                <p>@Html.DropDownList("DropDownListAuthorities", new SelectList(Model._Authorities.Where(x => x.authority_id != Model._Employee.employee_authority_id), "authority_id", "authority_name"), Model._Authority.authority_name)</p>
+                <p>@Html.DropDownList("DropDownListAuthorities", new SelectList(Model._Authorities.Where(x => x.authority_id != Model._Employee.employee_authority_id), "authority_id", "authority_name"), Model._Authority.authority_name, new { @class = "form-control" })</p>
             </div>
         </div>
         <p>
-            <button type="submit" class="btn btn-warning"> Güncelle </button>
-            <button type="reset" class="btn btn-secondary"> Temizle</button>
-            <button class="btn btn-danger" href="/Admin/RemoveEmployee/@Model._Employee.employee_id">Sil</button>
+            <button type="submit" class="btn btn-outline-warning"> Güncelle </button>
+            <button type="reset" class="btn btn-outline-secondary"> Temizle</button>
+            <button class="btn btn-outline-danger" href="/Admin/RemoveEmployee/@Model._Employee.employee_id">Sil</button>
         </p>
     }
 </div>
