--- a/CustTrack/Views/Shared/_adminLayout.cshtml
+++ b/CustTrack/Views/Shared/_adminLayout.cshtml
@@ -18,7 +18,7 @@
 
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="/Admin/Index">Bölümler</a>
                     </li>
                     <li class="nav-item">
