--- a/CustTrack/Views/Customers/Index.cshtml
+++ b/CustTrack/Views/Customers/Index.cshtml
@@ -1,8 +1,33 @@
-﻿
+﻿@model CustTrack.Models.CustomersModel
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
-
+<div class="container">
+    <br />
+    <h3> Şirketlerin Bilgileri </h3>
+    <table class="table table-borderless">
+        <thead>
+            <tr>
+                <td>İsim</td>
+                <td>Sektör</td>
+                <td>Telefon</td>
+                <td>Daha fazla</td>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var cust in Model.Custs)
+            {
+                <tr>
+                    <td>@cust.customer_company_name</td>
+                    <td>@cust.customer_sector</td>
+                    <td>@cust.customer_phone</td>
+                    <td><a class="btn btn-outline-secondary" href="/Customers/Update/@cust.customer_id">Detay</a></td>
+                </tr>
+            }
+        </tbody>
+        <div>
+            <a class="btn btn-secondary" href="/Customers/Update/0"> Müşteri Ekle </a>
+        </div>
+    </table>
+</div>
