--- a/CustTrack/Views/Customers/Update.cshtml
+++ b/CustTrack/Views/Customers/Update.cshtml
@@ -1,4 +1,5 @@
 ﻿@model CustTrack.Models.CustomerModel
+
 @{
     ViewBag.Title = "Update";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,36 +7,61 @@
 
 <div class="container">
     <br />
+    @Html.AntiForgeryToken()
     @using (Html.BeginForm("Update", "Customers", FormMethod.Post))
     {
-        @Html.AntiForgeryToken()
-        if(Model.customers.customer_id != 0)
-        {
-            <h4 align="center">Güncelleme: <b>@Html.DisplayFor(model => model.customer.customer_company_name)</b></b></h4>
+        <div align="center" class="container">
+            @if (Model._Cust.customer_id != 0)
+            {
+            <h4 align="center">Güncelleme: <b>@Html.DisplayFor(model => model._Cust.customer_company_name)</b></h4>
             <hr />
-            <div align="center" class="form-group">
-                @Html.TextBoxFor( m => m.cust.customer_authorized_1)
-                @Html.TextBoxFor( m => m.cust.customer_authorized_2)
-                @Html.TextBoxFor( m => m.cust.customer_authorized_3)
-                @Html.TextBoxFor( m => m.cust.customer_sector)
-                @Html.TextBoxFor( m => m.cust.customer_area)
-                @Html.TextBoxFor( m => m.cust.customer_phone)
-                @Html.TextBoxFor( m => m.cust.customer_mail)
+            <div class="form-group">
+                <p>@Html.TextBoxFor(m => m._Cust.customer_authorized_1, new { @class = "form-control", placeholder = "Yetkili" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_authorized_2, new { @class = "form-control", placeholder = "Yetkili 2" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_authorized_3, new { @class = "form-control", placeholder = "Yetkili 3" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_sector, new { @class = "form-control", placeholder = "Sektör" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_area, new { @class = "form-control", placeholder = "Alan" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_phone, new { @class = "form-control", placeholder = "Telefon" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_mail, new { @class = "form-control", placeholder = "Mail" })</p>
             </div>
-            <div align="center" class="form-group">
-                @Html.TextBoxFor( m => m.cust.customer_company_name)
-                @Html.TextBoxFor( m => m.cust.customer_province)
-                @Html.TextBoxFor( m => m.cust.customer_district)
-                @Html.TextBoxFor( m => m.cust.customer_post_code)
-                @Html.TextBoxFor( m => m.cust.customer_tax_number)
-                @Html.TextBoxFor( m => m.cust.customer_tax_administration)
-                @Html.TextBoxFor( m => m.cust.customer_fax)
+            <div class="form-group">
+                <p>@Html.TextBoxFor(m => m._Cust.customer_company_name, new { @class = "form-control", placeholder = "Şirket Adı" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_province, new { @class = "form-control", placeholder = "İl" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_district, new { @class = "form-control", placeholder = "İlçe" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_post_code, new { @class = "form-control", placeholder = "Posta kodu" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_tax_number, new { @class = "form-control", placeholder = "Vergi No" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_tax_administration, new { @class = "form-control", placeholder = "Vergi Dairesi" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_fax, new { @class = "form-control", placeholder = "Fax No" })</p>
             </div>
+            }
+            else
+            {
+            <h4 align="center">Yeni Müşteri</h4>
+            <hr />
+            <div class="form-group">
+                <p>@Html.TextBoxFor(m => m._Cust.customer_authorized_1, new { @class = "form-control", placeholder = "Yetkili" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_authorized_2, new { @class = "form-control", placeholder = "Yetkili 2" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_authorized_3, new { @class = "form-control", placeholder = "Yetkili 3" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_sector, new { @class = "form-control", placeholder = "Sektör" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_area, new { @class = "form-control", placeholder = "Alan" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_phone, new { @class = "form-control", placeholder = "Telefon" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_mail, new { @class = "form-control", placeholder = "Mail" })</p>
+            </div>
+            <div class="form-group">
+                <p>@Html.TextBoxFor(m => m._Cust.customer_company_name, new { @class = "form-control", placeholder = "Şirket Adı" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_province, new { @class = "form-control", placeholder = "İl" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_district, new { @class = "form-control", placeholder = "İlçe" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_post_code, new { @class = "form-control", placeholder = "Posta kodu" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_tax_number, new { @class = "form-control", placeholder = "Vergi No" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_tax_administration, new { @class = "form-control", placeholder = "Vergi Dairesi" })</p>
+                <p>@Html.TextBoxFor(m => m._Cust.customer_fax, new { @class = "form-control", placeholder = "Fax No" })</p>
+            </div>
+            }
             <p>
-                @Html.HiddenFor(m => m.emp.employee_id)
+                @Html.HiddenFor(m => m._Emp.employee_id)
                 <button type="submit" class="btn"> Kaydet </button>
                 <button type="reset" class="btn"> Temizle </button>
             </p>
-        }
+        </div>
     }
 </div>
