--- a/CustTrack/Views/Departmants/Index.cshtml
+++ b/CustTrack/Views/Departmants/Index.cshtml
@@ -11,7 +11,7 @@
 </head>
 <div class="container">
     <br />
-    <table class="table table-borderless">
+    <table class="table table-borderless table-responsive-sm table-responsive-md">
         <thead>
             <tr>
                 <td align="center"><b>Bölüm</b></td>
