--- a/CustTrack/Views/Employees/Index.cshtml
+++ b/CustTrack/Views/Employees/Index.cshtml
@@ -6,7 +6,7 @@
 
 @ViewBag.Mesaj
 <br />
-<table class="table table-borderless">
+<table class="table table-borderless table-responsive-sm table-responsive-md">
     <thead>
         <tr align="center">
             <th>Adı Soyadı</th>
@@ -17,20 +17,20 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var employee in Model.Employees)
+        @foreach (var employee in Model._Employees)
         {
             <tr align="center" >
                 <td>@employee.employee_name @employee.employee_surname</td>
                 <td>@employee.employee_mail</td>
                 @if (employee.employee_authority_id == 2)
                 {
-                    <td bgcolor="#95b3e2">@Model.Authorities.First(x => x.authority_id == employee.employee_authority_id).authority_name</td>
+                    <td bgcolor="#95b3e2">@Model._Authorities.First(x => x.authority_id == employee.employee_authority_id).authority_name</td>
                 }
                 else
                 {
-                    <td bgcolor="#d3dcea">@Model.Authorities.First(x => x.authority_id == employee.employee_authority_id).authority_name</td>
+                    <td bgcolor="#d3dcea">@Model._Authorities.First(x => x.authority_id == employee.employee_authority_id).authority_name</td>
                 }
-                <td>@Model.Departmans.First(x => x.department_id == employee.department_id).department_name</td>
+                <td>@Model._Departmans.First(x => x.department_id == employee.department_id).department_name</td>
                 <td><a class="btn btn-outline-dark" href="/Employees/Update/@employee.employee_id">Detay</a></td>
             </tr>
             
