--- a/CustTrack/Views/Departmants/Update.cshtml
+++ b/CustTrack/Views/Departmants/Update.cshtml
@@ -9,39 +9,34 @@
     @using (Html.BeginForm("Update", "Departmants", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
-        if (Model.Department.department_id != 0)
+        if (Model._Department.department_id != 0)
         {
-            <h4 align="center">Güncelleme: <b>@Html.DisplayFor(model => model.Department.department_name)</b></h4>
+            <h4 align="center">Güncelleme: <b>@Html.DisplayFor(model => model._Department.department_name)</b></h4>
             <hr />
             <div class="form-group">
-                @Html.TextBoxFor(m => m.Department.department_name, new { @class = "form-control", placeholder = "Bölüm Adı" })
+                @Html.TextBoxFor(m => m._Department.department_name, new { @class = "form-control", placeholder = "Bölüm Adı" })
             </div>
             <div class="form-group">
                 <h5>Bu bölümde çalışanlar</h5>
-                @foreach (var emp in Model.EmployeeModel)
+                @foreach (var emp in Model._EmployeeModel)
                 {
                     <h6>@emp.employee_name</h6>
                 }
             </div>
             <div class="form-group">
-                @foreach (var emp in Model.ManagerModel)
+                @foreach (var emp in Model._ManagerModel)
                 {
                     <label>@emp.employee_name</label>
                 }
             </div>
-            <p>
-                @Html.HiddenFor(m => m.Department.department_id)
-                <button type="submit" class="btn btn-outline-dark"> Kaydet </button>
-                <button type="reset" class="btn btn-outline-secondary"> Temizle </button>
-                <button class="btn btn-outline-danger" href="/Departmants/Remove/@Model.Department.department_id">Sil</button>
-            </p>
+
         }
         else
         {
             <h4 align="center">Yeni Bölüm</h4>
             <hr />
             <div class="form-group">
-                @Html.TextBoxFor(m => m.Department.department_name, new { @class = "form-control", placeholder = "Bölüm Adı" })
+                @Html.TextBoxFor(m => m._Department.department_name, new { @class = "form-control", placeholder = "Bölüm Adı" })
             </div>
             <div class="form-group">
                 <h5>Çalışanlar</h5>
@@ -52,11 +47,21 @@
                 </div>
                 <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
             </div>
-            <p>
-                @Html.HiddenFor(m => m.Department.department_id)
-                <button type="submit" class="btn"> Kaydet </button>
-                <button type="reset" class="btn"> Temizle </button>
-            </p>
         }
+            <p>
+                @Html.HiddenFor(m => m._Department.department_id)
+
+
+                @if (Model._Department.department_id != 0)
+                {
+                    <input name="submit" class="btn btn-outline-warning" type="submit" id="save" value="Güncelle" />
+                }
+                else
+                {
+                    <input name="submit" class="btn btn-outline-warning" type="submit" id="save" value="Kaydet" />
+                }
+                <input name="submit" class="btn btn-outline-danger" type="submit" id="delete" value="Sil" />
+                <button type="reset" class="btn btn-outline-secondary"> Temizle </button>
+            </p>
     }
 </div>
