--- a/CustTrack/Views/Employees/Update.cshtml
+++ b/CustTrack/Views/Employees/Update.cshtml
@@ -31,9 +31,9 @@
             </div>
         </div>
         <p>
-            <button type="submit" class="btn btn-outline-warning"> Güncelle </button>
-            <button type="reset" class="btn btn-outline-secondary"> Temizle</button>
-            <button class="btn btn-outline-danger" href="/Employees/Remove/@Model._Employee.employee_id">Sil</button>
+            <input name="submit" class="btn btn-outline-warning" type="submit" id="save" value="Güncelle" />
+            <button type="reset" class="btn btn-outline-secondary"> Temizle </button>
+            <input name="submit" class="btn btn-outline-danger" type="submit" id="delete" value="Sil" />
         </p>
     }
 </div>
