Departman bölümü için geliştirmeler içermektedir

--- a/CustTrack/Views/Customers/Index.cshtml
+++ b/CustTrack/Views/Customers/Index.cshtml
@@ -27,8 +27,8 @@
                 </tr>
             }
         </tbody>
-        <div>
-            <a class="btn btn-secondary" href="/Customers/Update/0"> Müşteri Ekle </a>
-        </div>
     </table>
+    <div align="right">
+        <a class="btn btn-secondary" href="/Customers/Update/0"> Müşteri Ekle </a>
+    </div>
 </div>
