--- a/CustTrack/Views/Departmants/Update.cshtml
+++ b/CustTrack/Views/Departmants/Update.cshtml
@@ -12,56 +12,62 @@
         if (Model._Department.department_id != 0)
         {
             <h4 align="center">Güncelleme: <b>@Html.DisplayFor(model => model._Department.department_name)</b></h4>
-            <hr />
-            <div class="form-group">
-                @Html.TextBoxFor(m => m._Department.department_name, new { @class = "form-control", placeholder = "Bölüm Adı" })
-            </div>
-            <div class="form-group">
-                <h5>Bu bölümde çalışanlar</h5>
-                @foreach (var emp in Model._EmployeeModel)
-                {
-                    <h6>@emp.employee_name</h6>
-                }
-            </div>
-            <div class="form-group">
-                @foreach (var emp in Model._ManagerModel)
-                {
-                    <label>@emp.employee_name</label>
-                }
-            </div>
-
         }
         else
         {
             <h4 align="center">Yeni Bölüm</h4>
-            <hr />
-            <div class="form-group">
-                @Html.TextBoxFor(m => m._Department.department_name, new { @class = "form-control", placeholder = "Bölüm Adı" })
-            </div>
-            <div class="form-group">
-                <h5>Çalışanlar</h5>
-            </div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1"> a</span>
-                </div>
-                <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-            </div>
         }
-            <p>
-                @Html.HiddenFor(m => m._Department.department_id)
+        <hr />
+        <div class="form-group">
+            @Html.TextBoxFor(m => m._Department.department_name, new { @class = "form-control", placeholder = "Bölüm Adı"})
+        </div>
+        <div class="input-group" align="center">
+            <span class="input-group-text" id="basic-addon1">Kullancı Adı:</span>
+            <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+        </div>
+        <br />
+        <div class="input-group mb-3">
+            <table class="table table-borderless table-responsive-sm table-responsive-md">
+                <thead>
+                    <tr>
+                        <td colspan="3" align="center" bgcolor="lightblue">Çalışanlar</td>
+                    </tr>
+                    <tr>
+                        <td align="center"><b>İsim</b></td>
+                        <td align="center"><b>İş Tanımı</b></td>
+                        <td align="center"><b>Daha fazla</b></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var emp in Model._Employees)
+                    {
+                        if (emp.department_id == Model._Department.department_id)
+                        {
+                            <tr>
+                                <td align="center">@emp.employee_name @emp.employee_surname</td>
+                                @{ string color = Model._Authorities.First(x => x.authority_id == emp.employee_authority_id).color; }
+                                <td align="center" bgcolor="@color">@Model._Authorities.First(m => m.authority_id == emp.employee_authority_id).authority_name</td>
+                                <td align="center"><a class="btn btn-outline-secondary" href="/Employees/Update/@emp.employee_id">Detay</a></td>
+                            </tr>
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
+        <p>
+            @Html.HiddenFor(m => m._Department.department_id)
 
 
-                @if (Model._Department.department_id != 0)
-                {
-                    <input name="submit" class="btn btn-outline-warning" type="submit" id="save" value="Güncelle" />
-                }
-                else
-                {
-                    <input name="submit" class="btn btn-outline-warning" type="submit" id="save" value="Kaydet" />
-                }
-                <input name="submit" class="btn btn-outline-danger" type="submit" id="delete" value="Sil" />
-                <button type="reset" class="btn btn-outline-secondary"> Temizle </button>
-            </p>
+            @if (Model._Department.department_id != 0)
+            {
+                <input name="submit" class="btn btn-outline-warning" type="submit" id="save" value="Güncelle" />
+            }
+            else
+            {
+                <input name="submit" class="btn btn-outline-warning" type="submit" id="save" value="Kaydet" />
+            }
+            <input name="submit" class="btn btn-outline-danger" type="submit" id="delete" value="Sil" />
+            <button type="reset" class="btn btn-outline-secondary"> Temizle </button>
+        </p>
     }
 </div>
