Takvim içerisinde alert'ın pop olmasını sağlar.

--- a/CustTrack/Views/Calendar/Index.cshtml
+++ b/CustTrack/Views/Calendar/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Takvim";
     Layout = "~/Views/Shared/_calendarLayout.cshtml";
 }
+<link rel="stylesheet" href="~/Content/alertifyjs/alertify.min.css" />
 <br />
 <div class="row">
     <section class="col-md-12 col-md-push-0">
@@ -13,5 +14,5 @@
     <script src='~/Scripts/fullcalendar/fullcalendar.js'></script>
     <script src="~/Scripts/fullcalendar/locale/tr.js"></script>
     <script src="~/Scripts/script-custom-calendar.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.1/build/alertify.min.js"></script>
+    <script src="~/Scripts/alertify.min.js"></script>
 }
