--- a/CustTrack/Views/Shared/_Layout.cshtml
+++ b/CustTrack/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - CustTrack</title>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.1/build/css/alertify.min.css" />
-    
+    <link rel="stylesheet" href="~/Content/alertifyjs/alertify.min.css" />
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/bootstrap.css")
 </head>
@@ -20,6 +20,7 @@
             <p>&copy; @DateTime.Now.Year - CustTrack</p>
         </footer>
     </div>
+    <script src="~/Scripts/alertify.min.js"></script>
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery-3.3.1.min.js"></script>
     @Scripts.Render("~/Scripts/bootstrap.js")
